# unifiMCP

./: .env.example  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
docs/: unifi-api.md
src/unifi_mcp/: __init__.py  server.py  unifi_client.py
src/unifi_mcp/resources/: __init__.py
src/unifi_mcp/tools/: __init__.py  clients.py  devices.py  site.py
tests/: test_client.py  test_server.py
